fix width on mobile view

--- a/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
@@ -29,6 +29,9 @@ body,
 .dataset-route,
 .dataset-wrap {
     height: 100%;
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .dataset-wrap,
@@ -261,7 +264,3 @@ body,
         -webkit-transition: left 0.3s;
     }
 }
-
-
-
-
